try to patch executable